Adding in some functionality for editing like playback and trimming

--- a/rechordly_app/mobile/src/main/res/layout/activity_transcribing.xml
+++ b/rechordly_app/mobile/src/main/res/layout/activity_transcribing.xml
@@ -5,8 +5,10 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/main"
+        android:id="@+id/lyrics"
         android:src="@drawable/home"
         android:clickable="true"/>
 
+
 </LinearLayout>
+
