--- a/rechordly_app/mobile/src/main/res/layout/activity_info.xml
+++ b/rechordly_app/mobile/src/main/res/layout/activity_info.xml
@@ -5,8 +5,8 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/main"
-        android:src="@drawable/home"
+        android:id="@+id/info"
+        android:src="@drawable/recording"
         android:clickable="true"/>
 
 </LinearLayout>
