--- a/rechordly_app/wear/src/main/res/layout/activity_main.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.wearable.view.WatchViewStub
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,4 +7,6 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     app:rectLayout="@layout/rect_activity_main" app:roundLayout="@layout/round_activity_main"
     tools:context=".MainActivity"
-    tools:deviceIds="wear"></android.support.wearable.view.WatchViewStub>
+    tools:deviceIds="wear">
+
+</android.support.wearable.view.WatchViewStub>
