--- a/rechordly_app/wear/src/main/res/layout/round_activity_main.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_main.xml
@@ -4,13 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context=".MainActivity" tools:deviceIds="wear_round">
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_round" />
 
     <android.support.wearable.view.DismissOverlayView
         android:layout_width="match_parent"
@@ -18,4 +11,26 @@
         android:id="@+id/dismiss_overlay"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="lyrics"
+        android:id="@+id/button"
+        android:layout_below="@+id/dismiss_overlay"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="98dp"
+        android:onClick="recordLyrics"/>
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="music"
+        android:id="@+id/button2"
+        android:layout_below="@+id/button"
+        android:layout_alignEnd="@+id/button"
+        android:layout_marginTop="131dp"
+        android:onClick="recordMusic"/>
 </RelativeLayout>
