--- a/rechordly_app/mobile/src/main/res/layout/activity_info.xml
+++ b/rechordly_app/mobile/src/main/res/layout/activity_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageView
@@ -9,4 +9,16 @@
         android:src="@drawable/recording"
         android:clickable="true"/>
 
-</LinearLayout>
+    <ToggleButton
+        android:id="@+id/playback"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/check"
+        android:layout_marginLeft="225dp"
+        android:layout_marginTop="270dp"
+        android:textOn=""
+        android:textOff=""
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
+
+</RelativeLayout>
