--- a/rechordly_app/wear/src/main/res/layout/round_activity_done.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_done.xml
@@ -3,22 +3,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context="me.chrisvle.rechordly.doneActivity"
     tools:deviceIds="wear_round">
 
-    <ImageButton
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/done_placeholder"
-        android:id="@+id/imageButton"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:id="@+id/text"
+    <ImageButton
+        android:layout_width="150dp"
+        android:layout_height="85dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitStart"
+        android:id="@+id/done_btn"
+        android:background="@android:color/transparent"
+        android:src="@drawable/big_done_btn"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/done_placeholder"
+        android:onClick = "onClick"
+        />
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/dots1"
+        android:src="@drawable/dot1"
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/done_btn"
+        android:layout_marginTop="5dp"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/left_arrow"
         android:layout_centerVertical="true"
-        android:text="Done Chooser" />
+        android:layout_toLeftOf="@id/done_btn"
+        android:layout_marginTop="5dp"
+        />
+
+
 </RelativeLayout>
