--- a/rechordly_app/wear/src/main/res/layout/round_activity_effects.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_effects.xml
@@ -3,22 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context="me.chrisvle.rechordly.EffectsActivity"
     tools:deviceIds="wear_round">
 
     <ImageButton
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/effects_placeholder"
-        android:id="@+id/imageButton"
+        android:layout_width="150dp"
+        android:layout_height="85dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitStart"
+        android:id="@+id/effect_btn"
+        android:background="@android:color/transparent"
+        android:src="@drawable/effects_btn"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/done_placeholder"
+        android:onClick = "onClick"
+       />
 
-    <TextView
-        android:id="@+id/text"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/dots4"
+        android:src="@drawable/dot4"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Effects Screen" />
+        android:layout_below="@id/effect_btn"
+        android:layout_marginTop="5dp"
+        />
 </RelativeLayout>
