--- a/rechordly_app/wear/src/main/res/layout/round_activity_resume.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_resume.xml
@@ -4,8 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context="me.chrisvle.rechordly.PlaybackActivity"
+    tools:context="me.chrisvle.rechordly.ResumeActivity"
     tools:deviceIds="wear_round">
+
+    <ImageView
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="-6dp"
+        android:src="@drawable/left_right_arrows"/>
 
     <ImageButton
         android:layout_width="111dp"
@@ -13,11 +20,11 @@
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:scaleType="fitStart"
-        android:src="@drawable/play_btn"
-        android:id="@+id/play_btn"
+        android:src="@drawable/record_btn"
+        android:id="@+id/resume_btn"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:onClick="play" />
+        android:onClick="resume" />
 
 
 </RelativeLayout>
