--- a/rechordly_app/wear/src/main/res/layout/round_activity_crop_fb.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_crop_fb.xml
@@ -4,33 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context="me.chrisvle.rechordly.SaveRetryActivity"
+    tools:context=".CropFbActivity"
     tools:deviceIds="wear_round">
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/save_retry_placeholder"
-        android:id="@+id/save_btn"
+        android:id="@+id/front_btn"
         android:adjustViewBounds="true"
-        android:src="@drawable/save_btn"
+        android:src="@drawable/front_crop_btn"
         android:background="@android:color/transparent"
         android:scaleType="fitStart"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="38dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginTop="36dp"
+        android:layout_centerHorizontal="true"
+        android:onClick="front_click"/>
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/save_retry_placeholder"
-        android:id="@+id/retry_btn"
-        android:src="@drawable/retry_btn"
+        android:id="@+id/back_btn"
+        android:src="@drawable/back_crop_btn"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:scaleType="fitStart"
-        android:layout_below="@+id/save_btn"
-        android:layout_marginTop="26dp"
-        android:layout_centerHorizontal="true" />
-
+        android:layout_below="@+id/front_btn"
+        android:layout_marginTop="22dp"
+        android:layout_centerHorizontal="true"
+        android:onClick="back_click"/>
 </RelativeLayout>
