--- a/rechordly_app/wear/src/main/res/layout/round_activity_main.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_main.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#000000"
     tools:context=".MainActivity"
     tools:deviceIds="wear_round">
@@ -19,29 +18,32 @@
         -->
 
     <ImageButton
-        android:layout_width="320dp"
-        android:layout_height="70dp"
-        android:adjustViewBounds="true"
-        android:scaleType="fitStart"
-        android:id="@+id/lyric_btn"
-        android:background="@android:color/transparent"
-        android:src="@drawable/record_lyrics_btn"
-        android:layout_gravity="center"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="27dp"
-        android:onClick="recordLyrics"/>
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:adjustViewBounds="true"
+    android:scaleType="fitStart"
+    android:id="@+id/lyric_btn"
+    android:background="@android:color/transparent"
+    android:src="@drawable/record_lyrics_btn"
+    android:layout_gravity="center"
+    android:layout_alignParentTop="true"
+    android:layout_marginTop="33dp" android:layout_marginRight="-4dp"
+    android:onClick="recordLyrics"/>
+
+
 
     <ImageButton
-        android:layout_width="320dp"
-        android:layout_height="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="fitStart"
         android:id="@+id/music_btn"
         android:background="@android:color/transparent"
         android:src="@drawable/record_music_btn"
         android:layout_gravity="center"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="20dp"
+        android:layout_below="@id/lyric_btn"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="-4dp"
         android:onClick="recordMusic"/>
 
-</LinearLayout>
+</RelativeLayout>
