Added volume selector screen with slider. Will play with different shapes for scroll bar later

--- a/rechordly_app/wear/src/main/res/layout/round_activity_main2.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_main2.xml
@@ -50,14 +50,15 @@
         android:layout_centerHorizontal="true"
         android:text="Record"/>
 
-    <TextView
+    <Chronometer
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/record_time"
         android:layout_above="@id/btnStart"
         android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
-        android:text="00:00"/>
+        />
+
 
 
 
