--- a/rechordly_app/wear/src/main/res/layout/activity_volume_chooser.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_volume_chooser.xml
@@ -8,4 +8,6 @@
     app:rectLayout="@layout/round_activity_volume_chooser"
     app:roundLayout="@layout/round_activity_volume_chooser"
     tools:context="me.chrisvle.rechordly.VolumeChooserActivity"
-    tools:deviceIds="wear"></android.support.wearable.view.WatchViewStub>
+    tools:deviceIds="wear">
+
+</android.support.wearable.view.WatchViewStub>
