--- a/rechordly_app/wear/src/main/res/layout/activity_filter_chooser.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_filter_chooser.xml
@@ -5,7 +5,7 @@
     android:id="@+id/watch_view_stub"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:rectLayout="@layout/round_activity_stop"
-    app:roundLayout="@layout/round_activity_stop"
-    tools:context="me.chrisvle.rechordly.StopActivity"
+    app:rectLayout="@layout/round_activity_filter_chooser"
+    app:roundLayout="@layout/round_activity_filter_chooser"
+    tools:context="me.chrisvle.rechordly.EffectsChooserActivity"
     tools:deviceIds="wear"></android.support.wearable.view.WatchViewStub>
