--- a/rechordly_app/wear/src/main/res/layout/activity_edit_nav.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_edit_nav.xml
@@ -5,7 +5,9 @@
     android:id="@+id/watch_view_stub"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:rectLayout="@layout/round_activity_resume"
-    app:roundLayout="@layout/round_activity_resume"
-    tools:context="me.chrisvle.rechordly.ResumeActivity"
-    tools:deviceIds="wear"></android.support.wearable.view.WatchViewStub>
+    app:rectLayout="@layout/round_activity_edit_nav"
+    app:roundLayout="@layout/round_activity_edit_nav"
+    tools:context="me.chrisvle.rechordly.EditNavActivity"
+    tools:deviceIds="wear">
+
+</android.support.wearable.view.WatchViewStub>
