--- a/rechordly_app/wear/src/main/res/layout/round_activity_main2.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_main2.xml
@@ -23,6 +23,18 @@
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:scaleType="fitStart"
+        android:src="@drawable/retry_icon"
+        android:id="@+id/retry_record"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:onClick="btnClick" />
+
+    <ImageButton
+        android:layout_width="111dp"
+        android:layout_height="111dp"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:scaleType="fitStart"
         android:src="@drawable/stop_btn"
         android:id="@+id/btnStop"
         android:layout_centerHorizontal="true"
@@ -40,6 +52,10 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:onClick="btnClick" />
+
+
+
+
 
     <TextView
         android:layout_width="wrap_content"
