dot sliding works. Delete irelevant code. Forgot to add all files in last commit [REAL]

--- a/rechordly_app/wear/src/main/res/layout/activity_crop.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_crop.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context="me.chrisvle.rechordly.CropActivity"
+    tools:context="me.chrisvle.rechordly.CropFragment"
     tools:deviceIds="wear_round">
 
 
