--- a/rechordly_app/wear/src/main/res/values/style.xml
+++ b/rechordly_app/wear/src/main/res/values/style.xml
@@ -2,5 +2,6 @@
 <resources>
     <style name="AppTheme" parent="@android:style/Theme.DeviceDefault">
         <item name="android:windowSwipeToDismiss">false</item>
+        <item name="android:typeface">monospace</item>
     </style>
 </resources>
