--- a/rechordly_app/wear/src/main/res/layout/fragment_edit_nav.xml
+++ b/rechordly_app/wear/src/main/res/layout/fragment_edit_nav.xml
@@ -10,15 +10,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/dots"
-        android:src="@drawable/dot1"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="22dp"
-        />
+        android:layout_marginBottom="22dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/dots"
+            android:src="@drawable/dots"
+            />
+
+        <ImageView
+            android:layout_width="11dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/light_dot"
+            android:src="@drawable/light_dot"
+            android:layout_marginLeft="43dp"
+            />
+    </RelativeLayout>
 
 
 </RelativeLayout>
