--- a/rechordly_app/wear/src/main/res/layout/fragment_retry.xml
+++ b/rechordly_app/wear/src/main/res/layout/fragment_retry.xml
@@ -18,6 +18,7 @@ tools:deviceIds="wear_round">
     android:src="@drawable/left_right_arrows"
    />
 
+
 <ImageButton
     android:layout_width="111dp"
     android:layout_height="111dp"
@@ -27,27 +28,29 @@ tools:deviceIds="wear_round">
     android:src="@drawable/retry_icon"
     android:id="@+id/retry_record"
     android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true"
-    android:onClick="btnClick" />
+    android:layout_marginTop="45dp"
+    />
 
 
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/record_text"
+    android:id="@+id/retry_text"
     android:layout_below="@id/retry_record"
-    android:layout_marginTop="15dp"
+    android:layout_marginTop="8dp"
     android:layout_centerHorizontal="true"
-    android:text="Record"/>
+    android:text="Retry"
+    android:textSize="28sp"/>
 
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/retry_time"
     android:layout_above="@id/retry_record"
-    android:layout_marginBottom="15dp"
+    android:layout_marginBottom="-38dp"
     android:layout_centerHorizontal="true"
     android:text="00:00"
+    android:textSize="23sp"
     />
 
 
