--- a/rechordly_app/wear/src/main/res/layout/round_activity_name.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_name.xml
@@ -9,9 +9,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name Recording?"
+        android:text="Name\n Recording?"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp"/>
+        android:layout_marginTop="25dp"
+        android:id="@+id/name_txt"
+        android:gravity="center"
+        android:textSize="24sp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
