--- a/rechordly_app/wear/src/main/res/layout/round_activity_volume_chooser.xml
+++ b/rechordly_app/wear/src/main/res/layout/round_activity_volume_chooser.xml
@@ -60,14 +60,16 @@
                 <!--android:background="@android:color/transparent"-->
                 <!--/>-->
             <Button
-                android:layout_width="75dp"
-                android:layout_height="28dp"
+                android:layout_width="65dp"
+                android:layout_height="23dp"
                 android:layout_gravity="center"
                 android:paddingTop="0dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/gradient"
                 android:text="Done"
                 android:id="@+id/volume_done"
+                android:textAllCaps="false"
+                android:textSize="17sp"
                />
 
         </LinearLayout>
