--- a/rechordly_app/wear/src/main/res/layout/activity_crop_back.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_crop_back.xml
@@ -50,8 +50,10 @@
             >
         </TextView>
         <Button
-            android:layout_width="70dp"
-            android:layout_height="25dp"
+            android:layout_width="90dp"
+            android:layout_height="35dp"
+            android:textSize="20sp"
+            android:textAllCaps="false"
             android:layout_gravity="center"
             android:paddingTop="0dp"
             android:layout_marginTop="75dp"
