--- a/rechordly_app/wear/src/main/res/layout/activity_volume_chooser.xml
+++ b/rechordly_app/wear/src/main/res/layout/activity_volume_chooser.xml
@@ -36,8 +36,8 @@
 
             <TextView
                 android:id="@+id/Volume"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="50dp"
                 android:paddingBottom="0dp"
